[package]
name = "cbench"
version = "0.1.0"
edition = "2021"
default-run = "cbench"

[dependencies]
anyhow = "1"
cargo_metadata = "0.18"
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
itertools = "0.13.0"
named-lock = "0.4.1"
nix = { version = "0.29", features = ["fs", "user"] }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
typetag = "0.2.16"
